tests/golden/type_errors/generic_explicit_builtin_member.cd
let values = [1];
print values.len<number>();
