tests/golden/type_errors/generic_explicit_builtin_member.err
Type error at 2:26: function is not generic
  print values.len<number>();
                           ^
